--- a/projects/People/app/src/main/AndroidManifest.xml
+++ b/projects/People/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".LogActivity"></activity>
+        <activity android:name=".PersonInputUnusualNavigationActivity" />
+        <activity android:name=".PersonInputActivity" />
         <activity android:name=".PeopleMainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
