--- a/projects/People/app/src/main/AndroidManifest.xml
+++ b/projects/People/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LogActivity"></activity>
+        <activity android:name=".PeopleListActivity"></activity>
+        <activity android:name=".LogActivity" />
         <activity android:name=".PersonInputUnusualNavigationActivity" />
         <activity android:name=".PersonInputActivity" />
         <activity android:name=".PeopleMainActivity">
